test/ClangImporter/objc_runtime_visible.code
// RUN: %target-language-frontend -typecheck -enable-objc-interop -disable-objc-attr-requires-foundation-module -I %S/../Inputs/custom-modules %s -verify

import ObjCRuntimeVisible

extension A {
  @objc fn foo() { } // expected-error{{instance method cannot be marked '@objc' because class 'A' is only visible via the Objective-C runtime}}
  fn bar() {} // okay, implicitly non-objc
}

fn test(x: AnyObject) {
  _ = x.bar() // expected-error {{value of type 'AnyObject' has no member 'bar'}}
}

class B : A { } // expected-error{{cannot inherit from class 'A' because it is only visible via the Objective-C runtime}}

protocol CodiraProto {}
@objc protocol ObjCProto {}

extension A: ObjCProto {} // expected-error {{class 'A' cannot conform to '@objc' protocol 'ObjCProto' because the class is only visible via the Objective-C runtime}}
extension A: CodiraProto {} // okay
